added package config reading, as well as marking game not active

--- a/data/boomerang_USA/config.yml
+++ b/data/boomerang_USA/config.yml
@@ -1,7 +1,7 @@
 about:
-  name: Boomerang Australia
-  class_name: BoomerangAustralia
-  is_active: True
+  name: Boomerang USA
+  class_name: BoomerangUSA
+  is_active: False
 
 naming:
   animals: animals
