fixed picking card, removed bug in client plus some more

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "code-runner.customCommand": "python src/main.py"
+    "code-runner.customCommand": "python src/main.py",
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter"
+    },
+    "python.formatting.provider": "none"
 }
