--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "code-runner.customCommand": "python src/main.py",
+    "code-runner.customCommand": "python main.py",
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter"
     },
